service-mesh/istio-1.0-vm/dsav/finxact/dsav-txn-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dsav-txn
  labels:
    app: dsav-txn
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dsav-txn
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #           - key: wallet
      #             operator: In
      #             values: ["yes"]
      containers:
      - name: dsav-txn
        image: tnindo/finxcore:0.250
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 8081
        volumeMounts:
#        - mountPath: /application/cfg
#          name: application-vol-config
        - mountPath: /application/file/internal/output
          name: application-vol-file-internal
      restartPolicy: Always
      imagePullSecrets:
      - name: regsecret
      volumes:
#      - name: application-vol-config
#        hostPath:
#          path: /data/dsav_vol_txn/cfg
      - name: application-vol-file-internal
        hostPath:
          path: /data/dsav/file/txn
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: dsav-txn
  labels:
    app: dsav-txn
spec:
  ports:
  -  port: 8080
     targetPort: 8080
     nodePort: 31903
     name: app
  -  port: 8081
     targetPort: 8081
     nodePort: 31904
     name: grpc
  type: LoadBalancer
  selector:
    app: dsav-txn
