service-mesh/istio-1.0-vm/dsav/finxact/dsav-txnmq-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dsav-txnmq
  labels:
    mq: dsav-txnmq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        mq: dsav-txnmq
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #           - key: wallet
      #             operator: In
      #             values: ["yes"]
      containers:
      - name: dsav-txnmq
        image: rabbitmq:3.6.6-management
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: vol-data
      restartPolicy: Always
      imagePullSecrets:
      - name: regsecret
      volumes:
      - name: vol-data
        hostPath:
          path: /data/dsav_vol_txnmq/data/
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: dsav-txnmq
  labels:
    mq: dsav-txnmq
spec:
  selector:
    mq: dsav-txnmq
  type: NodePort
  ports:
    - name: amqp
      port: 5672
      nodePort: 31905
    - name: mqmgt
      port: 15672
      nodePort: 31906
    - name: epmd
      port: 4369
      protocol: TCP
      targetPort: epmd
